{
    "name": "MyInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "c70611e7-2ed3-4c7c-ae56-e42f4e0f5a36",
            "actions": [
                {
                    "name": "Steering",
                    "type": "Value",
                    "id": "69a11798-3e75-47e9-9fc6-6038e2946bcc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Acceleration",
                    "type": "Button",
                    "id": "7ccd0e80-ae45-4cc7-b57a-3e795879f43b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Brake",
                    "type": "Button",
                    "id": "8c86ffe7-9d8f-4fd0-a06a-3ba9785e36d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HandBrake",
                    "type": "Button",
                    "id": "edbbab4b-e505-4940-a91e-0e9e737f9f72",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera",
                    "type": "Button",
                    "id": "20bc074d-159d-4368-9dd6-3db436dcb784",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drive",
                    "type": "Button",
                    "id": "793b757a-2f66-40fd-9d38-5e5a6518d1ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Nuteral",
                    "type": "Button",
                    "id": "d20e4374-3b33-4b7d-9ead-9186ae5e97bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reverce",
                    "type": "Button",
                    "id": "36b2acc4-686b-4e5e-a956-40add1e521ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "04301da0-d8be-4174-84de-ced58f7b3091",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "9bb25596-7e25-44c0-a3c2-20cfe49c9384",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a76a100f-6a10-4576-b138-a5fdc56bbc93",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c87ec19e-d8bb-422b-9094-70f65230a8c4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow",
                    "id": "7ec35219-da50-4f8d-9bf3-99f323b4ff91",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "43fe20b1-2329-4abb-89d6-00f7e4b7f80b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "dc0dabf9-c9b9-4765-8e68-a24198487348",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e0cf935f-7ca9-4412-a46b-545bfb10d3da",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca6fe875-4f77-4992-a0a6-4ba9a18da97e",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb8f2a34-626c-4b1c-82f6-d60e6595a3c7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "091d2cc0-7756-4f12-b3d7-3fb99a92a82b",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e33a14fb-59b2-4b59-8260-4c5290bd1290",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandBrake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c19bbcb-519c-42c1-9e8f-d2f8ad6e7d01",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37288eda-f4fb-43fa-9c2e-9a6096f534e5",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9908b8a4-f255-4545-9b68-ff63c1985acc",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Nuteral",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2088ff18-5966-453e-a8da-18cdd8ddfcd9",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reverce",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09e62143-06b1-40a9-b769-9570474b6d51",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "0d62eb84-7250-4268-b998-5e44ccac542f",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "5a08deb0-1478-4687-80f7-f746ed17b3a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2361c4db-279b-4aa0-b1e9-c9144b7ba214",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TimeLine",
            "id": "0d32adf1-5dfc-4fe8-80a7-831cb2b11a2f",
            "actions": [
                {
                    "name": "Skip",
                    "type": "Button",
                    "id": "5584d711-0d1d-416d-9c07-4e7ed1a6c163",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d351ba7-e023-4c1a-9878-1279c45a9529",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}